[gd_scene load_steps=11 format=3 uid="uid://c3eqsrwplxe2h"]

[ext_resource type="Script" path="res://src/core/entities/character-type/character_type.gd" id="1_8eqh2"]
[ext_resource type="PackedScene" uid="uid://bhg3045wtayrb" path="res://src/core/entities/character-type/head.tscn" id="2_80854"]
[ext_resource type="Script" path="res://src/core/entities/character-type/head.gd" id="3_4fsq6"]
[ext_resource type="PackedScene" uid="uid://b2jn3cl33sn6t" path="res://src/core/components/hitbox_component/hitbox_component.tscn" id="3_ar2nw"]
[ext_resource type="PackedScene" uid="uid://bjx8u6yus3ql1" path="res://src/core/components/health_component/health_component.tscn" id="4_4bm0j"]
[ext_resource type="PackedScene" uid="uid://t3000f2tsxew" path="res://src/core/components/defense_component/defense_component.tscn" id="5_2p25l"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_d5h01"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:_total_air_jump_count")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:_air_jump_count")
properties/4/spawn = true
properties/4/replication_mode = 2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l3v0b"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1g7ni"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qg3pb"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="CharacterType" type="CharacterBody3D"]
collision_layer = 5
collision_mask = 2
safe_margin = 0.1
script = ExtResource("1_8eqh2")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_d5h01")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_l3v0b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_1g7ni")

[node name="Head" parent="." instance=ExtResource("2_80854")]
script = ExtResource("3_4fsq6")

[node name="HitboxComponent" parent="." instance=ExtResource("3_ar2nw")]
shape = SubResource("ConvexPolygonShape3D_qg3pb")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("_defense_component") instance=ExtResource("4_4bm0j")]
_defense_component = NodePath("../DefenseComponent")

[node name="DefenseComponent" parent="." instance=ExtResource("5_2p25l")]
